Update venv requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,12 @@
+certifi==2017.11.5
+chardet==3.0.4
 Django==1.11.8
+gitdb2==2.0.3
+GitPython==2.1.7
+idna==2.6
 olefile==0.44
 Pillow==4.3.0
 pytz==2017.3
+requests==2.18.4
+smmap2==2.0.3
+urllib3==1.22
