16 - Uploading & Handling Images

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 bin/
 include/
 pip-selfcheck.json
+static-server/media-root/status/cfe/
 
 # Django related 
 # src/<yourproject>/settings/local.py
